objects/Invoice__c.object
<CustomObject>
    <description>Exercise 2</description>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>This field is used to identify the status of the Invoice.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Pending review</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Invoice__c</fullName>
        <description>Sum of total invoice value</description>
        <inlineHelpText>Sum of total invoice value</inlineHelpText>
        <label>Total Invoice</label>
        <summarizedField>Line_Item__c.Total_cost__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>testformula__c</fullName>
        <formula>HYPERLINK(&quot;javascript:INCLUDESCRIPT(&apos;../support/console/38.0/integration.js&apos;);alert(sforce.console.isInConsole());var urlString = &apos;http://google.ca&apos;;if (typeof(srcUp) == &apos;function&apos;) { srcUp(urlString);} else {window.open(urlString);}&quot;,&quot;Check&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testformula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>triggerupdatefield__c</fullName>
        <description>trigger update field</description>
        <label>triggerupdatefield</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>triggerupdatefield__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>kabali_queue_Invoice</fullName>
        <filterScope>Queue</filterScope>
        <label>kabali queue</label>
        <queue>kabali_queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inovices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>